<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/logo_reda"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_arredondado"
        android:backgroundTint="#6179FF"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="15dp"
        android:hint="@string/insira_seu_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FBFDFD"
        android:textStyle="italic"
        app:cornerRadius="15dp"/>

    <EditText android:id="@+id/edt_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_arredondado"
        android:backgroundTint="#6179FF"
        android:drawableStart="@drawable/icon_senha"
        android:drawablePadding="15dp"
        android:hint="@string/insira_sua_senha"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FBFDFD"
        android:textStyle="italic"
        app:cornerRadius="15dp"/>

    <TextView android:id="@+id/edt_OutrasOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/outras_op_es"
        android:padding="10dp"
        android:textColor="#C14D27"
        android:textColorHint="#FF5722"
        android:textStyle="italic"
        app:cornerRadius="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/login_com_google"
        android:textColor="#3F51B5"
        android:textStyle="italic"
        app:backgroundTint="#FBFDFD"
        app:cornerRadius="15dp"
        app:icon="@drawable/google_icon"
        app:iconGravity="textStart"
        app:iconTint="@null"/>

</LinearLayout>

